<resources>
    <string name="app_name">fly</string>
    <string name="select_ticket_type">Select a ticket type</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="my_bookings">My bookings</string>
    <string name="book_your_ticket">Book Your Ticket</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_datex">Select a date</string>
    <string name="enter_the_place_of_departure">Enter the place of departure</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="please_enter_all_details_for_your_booking">Please enter all details for your booking</string>
    <string name="okk">Ok</string>
    <string name="your_ticket_successfully_booked">Your ticket successfully booked</string>
</resources>
