<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:foregroundTint="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etPassengerName"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="37dp"
        android:layout_marginTop="177dp"
        android:autofillHints=""
        android:fontFamily="Inter"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#4E4F54"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etDeparture"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:autofillHints=""
        android:fontFamily="Inter"
        android:hint="@string/enter_the_place_of_departure"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#4E4F54"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:autofillHints="" android:fontFamily="Inter"
        android:hint="@string/enter_your_destination"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#4E4F54"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlHardcoded" />


    <EditText
        android:id="@+id/etDate"
        android:autofillHints=""
        android:inputType="text"

        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:focusable="false"
        android:fontFamily="Inter"
        android:hint="@string/select_a_date"
        android:textColor="@color/white"
        android:textColorHint="#4E4F54"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlHardcoded,TextFields" />

    <Spinner
        android:id="@+id/spinnerTicketType"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginStart="196dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="#4E4F54"
        android:entries="@array/ticket_types"
        android:focusable="false"
        android:fontFamily="Inter"
        android:hint="@string/select_a_datex"
        android:prompt="@string/select_ticket_type"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="normal"
        tools:ignore="RtlHardcoded" />

    <ToggleButton
        android:id="@+id/toggleBaggage"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/toggle_btn_bg"
        android:text=""
        android:textOff=""
        android:textOn="" />


    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="194dp"
        android:layout_marginTop="-22dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#B5E77E"
        android:visibility="gone"
        android:layout_gravity="left"
        android:fontFamily="Inter"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/btnBookTicket"
        android:text="@string/buy_ticket"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="#B5E77E"
        android:textColor="#555D4F"
        android:textSize="48sp"
        android:textStyle="bold"/>

</LinearLayout>

